# xRipEncode

./: CHANGELOG.md  CMakeLists.txt  README.md  xApplication.cpp  xApplication.h  xArchiveFile.cpp  xArchiveFile.h  xAudioCD.cpp  xAudioCD.h  xAudioFile.cpp  xAudioFile.h  xAudioRipper.cpp  xAudioRipper.h  xAudioTracksWidget.cpp  xAudioTracksWidget.h  xEncodingTracksWidget.cpp  xEncodingTracksWidget.h  xMainArchiveFileWidget.cpp  xMainArchiveFileWidget.h  xMainAudioCDWidget.cpp  xMainAudioCDWidget.h  xMainAudioRipperWidget.cpp  xMainAudioRipperWidget.h  xMainEncodingWidget.cpp  xMainEncodingWidget.h  xMainMovieFileWidget.cpp  xMainMovieFileWidget.h  xMovieFile.cpp  xMovieFile.h  xMovieFileTrack.cpp  xMovieFileTrack.h  xReplaceWidget.cpp  xReplaceWidget.h  xRipEncode.cpp  xRipEncodeConfiguration.cpp  xRipEncodeConfiguration.h  xRipEncodeConfigurationDialog.cpp  xRipEncodeConfigurationDialog.h
